src/sql_2_json/tokens.g4
grammar tokens;

QUOTED_DATE: (SINGLE_QUOTATION_MARK | DOUBLE_QUOTATION_MARK) DATE (SINGLE_QUOTATION_MARK| DOUBLE_QUOTATION_MARK);
DATE: YEAR+ SLASH MONTH+ SLASH DAY+;
fragment YEAR: DIGIT DIGIT DIGIT DIGIT;
fragment MONTH: '0'[1-9] | '1'[0-2];
fragment DAY: '0'[1-9] | [12][0-9] | '3'[01];

SELECT: 'select' | 'SELECT';
FROM: 'from' | 'FROM';
WHERE: 'where' | 'WHERE';
IN: 'in' | 'IN';
ON: 'on' | 'ON';
NOT: 'not' | 'NOT';
EXCEPT: 'except' | 'EXCEPT';
EQ: '=';
DIFFERENT: '!=';

INNER_JOIN: 'inner join' | 'INNER JOIN';
LEFT_JOIN: 'left join' | 'LEFT JOIN';
RIGHT_JOIN: 'right join' | 'RIGHT JOIN';
NATURAL_JOIN: 'natural join' | 'NATURAL JOIN';
FULL_OUTER_JOIN: 'full outer join' | 'FULL OUTER JOIN';

table_column_name: 
	STRING |
	DOUBLE_QUOTATION_MARK STRING DOUBLE_QUOTATION_MARK |
	SINGLE_QUOTATION_MARK STRING SINGLE_QUOTATION_MARK;

table_name: 
	STRING |
	DOUBLE_QUOTATION_MARK STRING DOUBLE_QUOTATION_MARK |
	SINGLE_QUOTATION_MARK STRING SINGLE_QUOTATION_MARK;

DOUBLE_QUOTATION_MARK: '"';
SINGLE_QUOTATION_MARK: '\'';

NUMBER: '-'? DIGIT+ DECIMAL_PART?;

DECIMAL_PART: POINT DIGIT+;

COMMA: ',';
SEMICOLON: ';';
POINT: '.';
STAR: '*';
GREATER: '>';
GEQ: '>=';
LOWER: '<';
LEQ: '<=';
SLASH: '/';
OPAR: '(';
CPAR: ')';
BETWEEN: 'BETWEEN' | 'between';
AND: 'AND' | 'and';
OR: 'OR' | 'or';
LIKE: 'like' | 'LIKE';

LETTER: [a-zA-Z];
DIGIT: [0-9];
TEXT:
	SINGLE_QUOTATION_MARK (.~('\''))*? SINGLE_QUOTATION_MARK
	| DOUBLE_QUOTATION_MARK (.~('"'))*? DOUBLE_QUOTATION_MARK;
STRING: [a-zA-Z0-9_]+;
FUNCTION_NAME : ([a-zA-Z0-9_.])+;
SPACE: [ \t\r\n]+ -> skip;
